Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12198

innodb_defragment=1 crashes server on OPTIMIZE TABLE when FULLTEXT index exists

    XMLWordPrintable

Details

    • 10.2.6-2, 10.2.6-3

    Description

      create or replace   TABLE `layout` (   `id` varbinary(16) NOT NULL,   `context` enum('page','slider','slideshow','menu') NOT NULL DEFAULT 'page',   `tag` varchar(400) NOT NULL,   `hash` varchar(500) DEFAULT NULL,   `device` enum('mobile','desktop','tablet') NOT NULL DEFAULT 'desktop',   `lang` varchar(10) NOT NULL DEFAULT 'fr',   `author` varchar(80) DEFAULT NULL,   `comment` text DEFAULT NULL,   `content` mediumtext DEFAULT NULL,   `footnote` mediumtext DEFAULT NULL,   `backup` mediumtext DEFAULT NULL,   `newbie` mediumtext DEFAULT NULL,   `expert` mediumtext DEFAULT NULL,   `status` enum('active','deleted','locked','backup','readonly','draft') DEFAULT NULL,   `ctime` int(11) NOT NULL,   `mtime` int(11) NOT NULL,   `version` varchar(10) NOT NULL DEFAULT '1.0.0',   PRIMARY KEY (`id`),   UNIQUE KEY `hash` (`hash`) USING BTREE,   KEY `author` (`author`),   KEY `ctime` (`ctime`),   KEY `mtime` (`mtime`),   KEY `version` (`version`),   KEY `ltype` (`context`),   KEY `tag` (`tag`),   FULLTEXT KEY `content` (`content`) ) 
       ENGINE=InnoDB DEFAULT CHARSET=utf8;
      

      MariaDB [0_2273db5d2273db62]> optimize table layout;
      ERROR 2006 (HY000): MySQL server has gone away
      No connection. Trying to reconnect...
      ERROR 2002 (HY000): Can't connect to local MySQL server through socket '/var/run/mysqld/mysqld.sock' (111)
      ERROR: Can't connect to the server

      unknown [0_2273db5d2273db62]> create or replace   TABLE `layout` (   `id` varbinary(16) NOT NULL,   `context` enum('page','slider','slideshow','menu') NOT NULL DEFAULT 'page',   `tag` varchar(400) NOT NULL,   `hash` varchar(500) DEFAULT NULL,   `device` enum('mobile','desktop','tablet') NOT NULL DEFAULT 'desktop',   `lang` varchar(10) NOT NULL DEFAULT 'fr',   `author` varchar(80) DEFAULT NULL,   `comment` text DEFAULT NULL,   `content` mediumtext DEFAULT NULL,   `footnote` mediumtext DEFAULT NULL,   `backup` mediumtext DEFAULT NULL,   `newbie` mediumtext DEFAULT NULL,   `expert` mediumtext DEFAULT NULL,   `status` enum('active','deleted','locked','backup','readonly','draft') DEFAULT NULL,   `ctime` int(11) NOT NULL,   `mtime` int(11) NOT NULL,   `version` varchar(10) NOT NULL DEFAULT '1.0.0',   PRIMARY KEY (`id`),   UNIQUE KEY `hash` (`hash`) USING BTREE,   KEY `author` (`author`),   KEY `ctime` (`ctime`),   KEY `mtime` (`mtime`),   KEY `version` (`version`),   KEY `ltype` (`context`),   KEY `tag` (`tag`) ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
      MariaDB [0_2273db5d2273db62]> optimize table layout;
      +---------------------------+----------+----------+----------+
      | Table                     | Op       | Msg_type | Msg_text |
      +---------------------------+----------+----------+----------+
      | 0_2273db5d2273db62.layout | optimize | status   | OK       |
      +---------------------------+----------+----------+----------+
      1 row in set (0.00 sec)
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              stephane@skysql.com VAROQUI Stephane
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: